notes/notes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-deployment
  labels:
    app: notes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes
  template:
    metadata:
      labels:
        app: notes
    spec:
      containers:
        - name: notes
          image: jleobernard/notes:2.0.0
          resources:
            limits:
              memory: 4Gi
              cpu: "4"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: notes-storage
              mountPath: /kosubs
            - name: notes-data
              mountPath: /data
            - name: notes-logs
              mountPath: /logs
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: notes-storage
          persistentVolumeClaim:
            claimName: notes-pv-claim
        - name: notes-data
          persistentVolumeClaim:
            claimName: notes-pv-claim-data
        - name: notes-logs
          persistentVolumeClaim:
            claimName: notes-pv-claim-logs
---
apiVersion: v1
kind: Service
metadata:
  name: notes-service
spec:
  selector:
    app: notes
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000
