notes/notes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-ingress
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
#  defaultBackend:
#    service:
#      name: notes-static
#      port:
#        number: 80
  tls:
  - hosts:
    - notes.jleo.tech
    secretName: ssl-cert-notes
  rules:
  - host: notes.jleo.tech
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: notes-service
            port:
              number: 8080
  - host: notes.jleo.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notes-static
            port:
              number: 80
